--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,13 @@
                         <a class="nav-link" href="/login">login</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/makeReservation">Make Resarvation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cancelReservation">Cancel Resarvation</a>
+                    </li>
+                    
+                    <li class="nav-item">
                         <a class="nav-link" href="/calendar">Calendar</a>
                     </li>
                     
