view all reservations & view your reservations

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,7 +64,12 @@
     </nav>
 
     <div >
-        Make reservation
+        <li >
+            <a href="/userReservations">View Your Reservations</a>
+        </li>
+        <li >
+            <a href="/allReservations">View All Reservations</a>
+        </li>
     </div>
 </body>
 </html>
