--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,14 +8,16 @@
     <% if (message) { %>
         <p><%= message %></p>
     <% } %>
-    <form action="/register" method="POST">
+    <form action="/user/register" method="POST">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="Username" required><br>
+        <input type="email" id="email" name="email" required><br><br>
+        <label for="Username">Username:</label>
+        <input type="text" id="username" name="Username" required><br><br>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
+        <input type="password" id="password" name="password" required><br><br>
         <input type="submit" value="Register">
+        <button><a class="nav-link" href="/login">login</a>
+        </button>
     </form>
 </body>
 </html>
