--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,15 +11,15 @@
             <% } %>
             <h1>Login</h1>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label>Email:</label>
             <input type="text" name="email" id="email" placeholder="Enter your email" required />
-        </div>
+        </div> -->
         <div class="form-group">
             <label>Username:</label>
             <input type="text" name="username" id="username" placeholder="Enter your username" required />
         </div>
-        
+        <br><br>
         <div class="form-group">
             <label>Password:</label>
             <input type="password" name="password" id="password" placeholder="Enter your password" required />
